<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Eurovision Time Machine</string>
    <string name="editions_tab_text">EDITIONS</string>
    <string name="countries_tab_text">COUNTRIES</string>
    <string name="search_tab_text">SEARCH</string>

    <string name="final_tab_text">FINAL</string>
    <string name="semifinal_tab_text">SEMIFINAL</string>
    <string name="semifinal1_tab_text">SEMIFINAL ONE</string>
    <string name="semifinal2_tab_text">SEMIFINAL TWO</string>
    <string name="results_tab_text">RESULTS</string>

    <string name="songs_tab_text">SONGS</string>

    <string name="lyrics">Lyrics</string>
    <string name="lyrics_not_available">Lyrics not available</string>

    <string name="eurovision">Eurovision</string>
    <string name="on_eurovision">on Eurovision</string>
    <string name="winner">Winner</string>
    <string name="appearances">appearances</string>
    <string name="push">Push</string>
    <string name="to_search">to search</string>
    <string name="no_results">There are no songs that match your search</string>
    <string name="points">points</string>
    <string name="did_not_qualify">Did not qualify for the final</string>

    <string name="search_country">Country:</string>
    <string name="search_artist">Artist:</string>
    <string name="search_song">Song:</string>
    <string name="search_year">Year:</string>
    <string name="search_order_by">Order by:</string>
    <string name="search_all">All</string>
    <string name="search_none">None</string>
    <string name="search_any">Any</string>
    <string name="search_some">Some</string>
    <string name="search_country_any">Any country</string>
    <string name="search_country_some">Some countries</string>
    <string name="search_year_any">Any year</string>
    <string name="search_year_some">Some years</string>
    <string name="search_artist_hint">Any artist</string>
    <string name="search_song_hint">Any song</string>

    <string-array name="search_order_by">
        <item>Year</item>
        <item>Country</item>
        <item>Position</item>
    </string-array>

    <string name="search">SEARCH</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="country_name_ue">European Union</string>
    <string name="country_name_alb">Albania</string>
    <string name="country_name_and">Andorra</string>
    <string name="country_name_arm">Armenia</string>
    <string name="country_name_aus">Australia</string>
    <string name="country_name_aut">Austria</string>
    <string name="country_name_aze">Azerbaijan</string>
    <string name="country_name_blr">Belarus</string>
    <string name="country_name_bel">Belgium</string>
    <string name="country_name_bih">Bosnia and Herzegovina</string>
    <string name="country_name_bgr">Bulgaria</string>
    <string name="country_name_can">Canada</string>
    <string name="country_name_hrv">Croatia</string>
    <string name="country_name_cyp">Cyprus</string>
    <string name="country_name_cze">Czech Republic</string>
    <string name="country_name_dnk">Denmark</string>
    <string name="country_name_est">Estonia</string>
    <string name="country_name_fin">Finland</string>
    <string name="country_name_fra">France</string>
    <string name="country_name_geo">Georgia</string>
    <string name="country_name_deu">Germany</string>
    <string name="country_name_grc">Greece</string>
    <string name="country_name_hun">Hungary</string>
    <string name="country_name_isl">Iceland</string>
    <string name="country_name_irl">Ireland</string>
    <string name="country_name_isr">Israel</string>
    <string name="country_name_ita">Italy</string>
    <string name="country_name_xkx">Kosovo</string>
    <string name="country_name_lva">Latvia</string>
    <string name="country_name_ltu">Lithuania</string>
    <string name="country_name_lux">Luxembourg</string>
    <string name="country_name_mkd">F.Y.R Macedonia</string>
    <string name="country_name_mlt">Malta</string>
    <string name="country_name_mda">Moldova</string>
    <string name="country_name_mco">Monaco</string>
    <string name="country_name_mne">Montenegro</string>
    <string name="country_name_mar">Morocco</string>
    <string name="country_name_nld">Netherlands</string>
    <string name="country_name_nor">Norway</string>
    <string name="country_name_pol">Poland</string>
    <string name="country_name_prt">Portugal</string>
    <string name="country_name_rou">Romania</string>
    <string name="country_name_rus">Russia</string>
    <string name="country_name_smr">San Marino</string>
    <string name="country_name_srb">Serbia</string>
    <string name="country_name_scg">Serbia and Montenegro</string>
    <string name="country_name_svk">Slovakia</string>
    <string name="country_name_svn">Slovenia</string>
    <string name="country_name_esp">Spain</string>
    <string name="country_name_swe">Sweden</string>
    <string name="country_name_che">Switzerland</string>
    <string name="country_name_tur">Turkey</string>
    <string name="country_name_ukr">Ukraine</string>
    <string name="country_name_gbr">United Kingdom</string>
    <string name="country_name_gb_wls">Wales</string>
    <string name="country_name_yug">Yugoslavia</string>

    <string name="city_name_amsterdam">Amsterdam</string>
    <string name="city_name_athens">Athens</string>
    <string name="city_name_baku">Baku</string>
    <string name="city_name_belgrade">Belgrade</string>
    <string name="city_name_bergen">Bergen</string>
    <string name="city_name_birmingham">Birmingham</string>
    <string name="city_name_brighton">Brighton</string>
    <string name="city_name_brussels">Brussels</string>
    <string name="city_name_cannes">Cannes</string>
    <string name="city_name_copenhagen">Copenhagen</string>
    <string name="city_name_dublin">Dublin</string>
    <string name="city_name_dusseldorf">Düsseldorf</string>
    <string name="city_name_edinburgh">Edinburgh</string>
    <string name="city_name_frankfurt">Frankfurt</string>
    <string name="city_name_gothenburg">Gothenburg</string>
    <string name="city_name_harrogate">Harrogate</string>
    <string name="city_name_helsinki">Helsinki</string>
    <string name="city_name_hilversum">Hilversum</string>
    <string name="city_name_istanbul">Istanbul</string>
    <string name="city_name_jerusalem">Jerusalem</string>
    <string name="city_name_kiev">Kiev</string>
    <string name="city_name_lausanne">Lausanne</string>
    <string name="city_name_lisbon">Lisbon</string>
    <string name="city_name_london">London</string>
    <string name="city_name_lugano">Lugano</string>
    <string name="city_name_luxembourg">Luxembourg</string>
    <string name="city_name_madrid">Madrid</string>
    <string name="city_name_malmo">Malmö</string>
    <string name="city_name_millstreet">Millstreet</string>
    <string name="city_name_moscow">Moscow</string>
    <string name="city_name_munich">Munich</string>
    <string name="city_name_naples">Naples</string>
    <string name="city_name_oslo">Oslo</string>
    <string name="city_name_paris">Paris</string>
    <string name="city_name_riga">Riga</string>
    <string name="city_name_rome">Rome</string>
    <string name="city_name_stockholm">Stockholm</string>
    <string name="city_name_tallinn">Tallinn</string>
    <string name="city_name_the_hague">The Hague</string>
    <string name="city_name_vienna">Vienna</string>
    <string name="city_name_zagreb">Zagreb</string>

</resources>
